add_library(progtools
  alpha.f
  check_existence.f90
  cleantext.f
  countr.f
  decode_ilist.f90
  decode_number.f90
  decode_rlist.f90
  echo.f
  extend_name.f90
  get_coordinates.f90
  getargs.f90
  getline.f
  index_or_not.f90
  int_to_char.f90
  locase.f
  lookup.f
  lookup2.f
  lstfil.f
  mpi_dummy.f
  ndigits.f90
  noblanks.f90
  noquotes.f90
  number.f
  numbered_name.f90
  numbered_name_2d.f90
  opener.f
  pairs.f
  parsenam.f
  qpldat.f
  rdlist.f
  rdlistc.f90
  rdqpl.f
  rdreals.f
  rdtuples.f
  rdxyz.f
  rdxyz2.f
  read_to_line_feed.f90
  readcols.f
  reader.f
  scan2.f
  scan3.f
  scan4.f
  scan_column.f
  scannr.f
  second.f
  select.f
  string_justify.f90
  stripper.f
  termin.f
  toggle.f
  token2.f
  token2l.f
  token4.f90
  token_count.f90
  tokens.f
  upcase.f
  writer.f
)
target_link_libraries(progtools PRIVATE global)
target_include_directories(progtools PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
install(FILES README DESTINATION doc)
